adding files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
 .git/
 .idea/
+
+.DS_Store
+*.pyc
+.gaedata
+
+django
+djangotoolbox
+djangoappengine
+django_mongodb_engine
+dbindexer
+autoload
+mediagenerator
+filetransfers
+mapreduce
+
+build
