--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,56 @@
 .git/
-.idea/
 
+# Numerous always-ignore extensions
+*.diff
+*.err
+*.orig
+*.log
+*.rej
+*.swo
+*.swp
+*.vi
+*~
+*.sass-cache
+
+# OS or Editor folders
 .DS_Store
+Thumbs.db
+.cache
+.project
+.settings
+.tmproj
+*.esproj
+nbproject
+*.sublime-project
+*.sublime-workspace
+
+# Komodo
+*.komodoproject
+.komodotools
+
+# Folders to ignore
+.hg
+.svn
+.CVS
+intermediate
+publish
+.idea
+
+# Ignore all logfiles and tempfiles.
+/log/*.log
+/tmp
+/test
+/public/uploads
+/public/system
+
+# Node
+node_modules
+
+# Python
 *.pyc
 .gaedata
 
+# Django
 django
 djangotoolbox
 djangoappengine
