colocando o módulo de mensagens

--- a/index.yaml
+++ b/index.yaml
@@ -37,3 +37,8 @@ indexes:
   properties:
   - name: __key__
     direction: desc
+
+- kind: core_wishlist
+  properties:
+  - name: __key__
+    direction: desc
