mudando o yaml para aceitar mais pastas estaticas

--- a/app.yaml
+++ b/app.yaml
@@ -34,5 +34,13 @@ handlers:
   static_dir: static_files
   expiration: '0'
 
+- url: /styles/
+  static_dir: assets/styles
+  expiration: '0'
+
+- url: /images/
+  static_dir: assets/images
+  expiration: '0'
+
 - url: /.*
   script: djangoappengine.main.application
