--- a/index.yaml
+++ b/index.yaml
@@ -33,7 +33,17 @@ indexes:
   - name: __key__
     direction: desc
 
+- kind: core_bid
+  properties:
+  - name: __key__
+    direction: desc
+
 - kind: core_categorie
+  properties:
+  - name: __key__
+    direction: desc
+
+- kind: core_company
   properties:
   - name: __key__
     direction: desc
